--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rjsf/validator-ajv8": "^5.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
     "tslib": "^2.6.2"
   },
   "devDependencies": {
